src/objects/SO_Status__c.object
<CustomObject>
    <fields>
        <fullName>Background_Color__c</fullName>
        <label>Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SO_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Clock_ON_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Clock ON Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <label>Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SO Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{00000000}</displayFormat>
        <label>SO Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SO Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>